<resources>
    <string name="app_name">gafa_pjo</string>


    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_btn_login">Entrar</string>
    <string name="txt_btn_cadastro">Cadastrar-se</string>
    <string name="txt_recuperar_senha">Esqueci a Senha... </string>

    <string name="hint_nome_cadastro">Nome Completo</string>
    <string name="hint_cpf_cadastro">Digite seu CPF</string>
    <string name="hint_telefone_cadastro">Fone</string>
    <string name="hint_email_cadastro">E-mail</string>
    <string name="hint_senha_cadastro">Senha</string>
    <string name="hint_confirmar_senha">Confirmar Senha</string>

    <string name="txt_btn_ConfirmarCadastro">CONFIRMAR</string>

</resources>