<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-37dp"
        tools:layout_editor_absoluteY="-111dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkCyanGreen"
            tools:context=".MainActivity"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editConfirmarSenha"
                android:layout_width="368dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/hint_confirmar_senha"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.395"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editSenhaCadastro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTelefoneCadastro"
                android:layout_width="368dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/hint_telefone_cadastro"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCPFCadastro" />

            <View
                android:id="@+id/containerTop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background_view_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="196dp"
                android:layout_height="153dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="@id/containerTop"
                app:layout_constraintEnd_toEndOf="@id/containerTop"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@id/containerTop"
                app:layout_constraintTop_toTopOf="@id/containerTop"
                app:srcCompat="@drawable/logo" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ConfirmarCadastro"
                android:layout_width="303dp"
                android:layout_height="66dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="184dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_button_selector"
                android:enabled="true"
                android:padding="15dp"
                android:text="@string/txt_btn_ConfirmarCadastro"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTelefoneCadastro" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="350dp"
                android:background="@drawable/background_view_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressbar" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNomeCadastro"
                android:layout_width="368dp"
                android:layout_height="43dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/hint_nome_cadastro"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.372"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCPFCadastro"
                android:layout_width="368dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/hint_cpf_cadastro"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editNomeCadastro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmailCadastro"
                android:layout_width="368dp"
                android:layout_height="43dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/background_edit_text"
                android:drawableEnd="@drawable/ic_email"
                android:hint="@string/hint_email_cadastro"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.418"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCPFCadastro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSenhaCadastro"
                android:layout_width="368dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/hint_senha_cadastro"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.418"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmailCadastro" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>